--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -106,14 +106,14 @@ h3 + p, h3 + ul, h3 + p + p { padding-left: 0; padding-right: 0; padding-top: .2
 .left_container img, .right_container img { width: 100%; }
 @media screen and (min-width: 56.25em) { .left_container, .right_container { width: 40%; height: 100%; float: none; } }
 
-.thumb-image img { opacity: 1.0; }
+.thumb-image img { -webkit-transform: scale3d(1, 1, 1); -moz-transform: scale3d(1, 1, 1); -o-transform: scale3d(1, 1, 1); transform: scale3d(1, 1, 1); }
 
 @media screen and (min-width: 56.25em) { .thumb-image-left { padding: 2.5em 1.25em 0em 2.5em; } }
 
 @media screen and (min-width: 56.25em) { .thumb-image-right { padding: 2.5em 2.5em 0em 1.25em; } }
 
-html.no-touch .thumb-image img { opacity: .9; -webkit-transition: all .2s ease-in-out; -moz-transition: all .2s ease-in-out; -o-transition: all .2s ease-in-out; transition: all .2s ease-in-out; }
-html.no-touch .thumb-image img:hover { opacity: 1.0; }
+html.no-touch .thumb-image img { -webkit-transition: all .2s ease-in-out; -moz-transition: all .2s ease-in-out; -o-transition: all .2s ease-in-out; transition: all .2s ease-in-out; }
+html.no-touch .thumb-image img:hover { -webkit-transform: scale3d(1.025, 1.025, 1); -moz-transform: scale3d(1.025, 1.025, 1); -o-transition: scale3d(1.025, 1.025, 1); transform: scale3d(1.025, 1.025, 1); }
 
 .project-callout-shell { padding: 3em; line-height: 1.5; background-color: rgba(0, 0, 0, 0.15); }
 .project-callout-shell .project-callout { font-size: 140%; color: #424242; padding-bottom: 0; }
