--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -359,7 +359,7 @@ html.no-touch .thumb-image img {
 	&:hover {
 		-webkit-transform: scale3d(1.025,1.025,1);
 		-moz-transform: scale3d(1.025,1.025,1);
-		-o-transition: scale3d(1.025,1.025,1);
+		-o-transform: scale3d(1.025,1.025,1);
 		transform: scale3d(1.025,1.025,1);	
 	}	
 }
