--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -55,6 +55,12 @@ Well hello there! Thanks for taking a look around. If you are curious about the 
   	transition: all .2s ease-in-out;	
 }
 
+@mixin preventFOUT {
+	.wf-loading & {
+		visibility:hidden;
+	}
+}
+
 // =========================
 //	03 SASS Variables
 // =========================
@@ -90,6 +96,7 @@ body {
 	font:400 100%/1.60 $font-serif;
 	color:rgba(33,33,33,1.0);
 	text-rendering:optimizeLegibility;
+	@include preventFOUT;
 }
 h1, h2 {
 	font-size: 150%;	
@@ -126,6 +133,7 @@ p, ul {
 		padding-bottom:0;
 		text-transform:uppercase;
 		color:rgba(0,0,0,1.0);
+		@include preventFOUT;
 	}
 	&.project-detail-content {
 		padding-bottom:.9em;	
@@ -143,6 +151,7 @@ p, ul {
 		padding-right:0.2em;
 		padding-bottom: 0;	
 		margin-top:1em;
+		@include preventFOUT;
 		@media screen and (min-width: $width-medium) { 
 			max-width:87.667em;	
 			padding-left:0.2em;
@@ -293,6 +302,7 @@ h3 + p, h3 + ul, h3 + p + p {
 	padding:0;
 	width: 100%;	
 	line-height:1.4;
+	@include preventFOUT;
 	@media screen and (min-width: $width-medium) { 
 			max-width:20em;	
 			line-height:inherit;
@@ -445,6 +455,7 @@ html.no-touch .thumb-image img {
 }
 .project-types {
 	@include small-sub-text;
+	@include preventFOUT;
 	margin-bottom:2em;
 	padding-bottom:0;		
 }
@@ -459,6 +470,7 @@ button {
 	background-color:rgba(117,117,117,1.0); 
 	@include rounded(.5em);
 	font-family:$font-sans;
+	@include preventFOUT;
 	font-size:100%;
 	padding:.75em 1.5em;
 	cursor:pointer;
@@ -589,6 +601,7 @@ footer {
 	letter-spacing:.1em;
 	color:rgba(255,255,255,0.7);
 	padding:0 .2em;	
+	@include preventFOUT;
 	@media screen and (min-width: $width-medium) { 
 		padding:0 .3em;	
 	}
