--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -48,39 +48,45 @@ em { font-style: italic; }
 
 div, article, section, header, footer, nav, figure, li { position: relative; }
 
-body { padding: 0; margin: 0; background-color: #f7f7f7; }
+body { padding: 0; margin: 0; background-color: #fafafa; }
 
-header { padding: 1.75em; }
+header { padding: 1.75em; margin: 0 auto; }
 @media screen and (min-width: 30em) { header { padding: 3.5em 2.5em 3.5em 2.5em; } }
 header a { color: #3cb878; }
+@media screen and (min-width: 56.25em) { header { width: 90%; } }
 
-.documentation { padding: 1.75em; }
-@media screen and (min-width: 30em) { .documentation { padding: 2.5em; } }
+.documentation { padding: 1.75em; padding-top: 0; width: 100%; margin: 0 auto; padding-bottom: 2.5em; }
+@media screen and (min-width: 30em) { .documentation { padding: 2.5em; padding-top: 0; } }
+@media screen and (min-width: 56.25em) { .documentation { width: 90%; padding-bottom: 5em; } }
 .documentation a { color: #3cb878; }
 .documentation.process h3.title { border-bottom: none; }
-.documentation.process .project-detail-heading { padding-left: .85em; padding-right: .85em; }
-.documentation.process .project-detail-content { padding-left: .6em; padding-right: .6em; padding-bottom: .6em; }
+.documentation.process .project-detail-content { padding-bottom: .6em; }
+.documentation.index { padding-top: 0; }
+@media screen and (min-width: 56.25em) { .documentation.index { padding-top: 2.5em; } }
 
-header { background-color: #f7f7f7; }
+header { background-color: #fafafa; }
 
 ul { list-style: none; }
 
 li { list-style-type: none; }
 
-img { width: 100%; display: block; }
+img { width: 100%; display: block; margin: 0 auto; margin-bottom: 2.5em; }
+@media screen and (min-width: 56.25em) { img { width: 90%; margin-bottom: 5em; } }
 
 img + img { margin-top: .15em; }
 
 .natural-img-img { margin-top: 0; }
 
-.logo-presentation { width: 100%; margin: 0 auto; }
+.logo-presentation { width: 100%; }
 @media screen and (min-width: 56.25em) { .logo-presentation { width: 65%; } }
 
 .small-illustrations { width: 65%; margin: 0 auto; }
 @media screen and (max-width: 30em) { .small-illustrations { width: 100%; } }
 @media screen and (min-width: 56.25em) { .small-illustrations { width: 100%; } }
 
+.embedded_video { margin-bottom: 2.5em; }
 .embedded_video figure { max-width: 62.5em; margin: 0 auto; }
+@media screen and (min-width: 56.25em) { .embedded_video { margin-bottom: 5em; } }
 
 a { text-decoration: none; -webkit-transition: all .2s ease-in-out; -moz-transition: all .2s ease-in-out; -o-transition: all .2s ease-in-out; transition: all .2s ease-in-out; }
 
@@ -90,14 +96,16 @@ h2 + p, h2 + ul { padding-left: 0; padding-right: 0; }
 h3 + p, h3 + ul, h3 + p + p { padding-left: 0; padding-right: 0; padding-top: .25em; }
 @media screen and (min-width: 56.25em) { h3 + p, h3 + ul, h3 + p + p { padding-left: .05em; padding-right: .05em; } }
 
-.main-wrapper { position: relative; margin: 0 auto; max-width: 90em; width: 100%; background-color: white; }
-@media screen and (min-width: 56.25em) { .main-wrapper { margin-bottom: 4em; width: 90%; } }
+.main-wrapper { position: relative; margin: 0 auto; max-width: 90em; width: 100%; background-color: #fafafa; }
 
 .title { font-family: "ff-tisa-sans-web-pro", "Helvetica Neue", Helvetica, sans-serif; padding: 0; width: 100%; line-height: 1.4; }
 .wf-loading .title { visibility: hidden; }
 @media screen and (min-width: 56.25em) { .title { max-width: 20em; line-height: inherit; } }
 
-.column_content { width: 100%; overflow: hidden; display: table; height: 100%; }
+.column_content { width: 100%; overflow: hidden; display: table; height: 100%; margin: 0 auto; margin-bottom: 2.5em; }
+.column_content img { margin-bottom: 0; width: 100%; }
+.column_content.index { margin-bottom: 0; }
+@media screen and (min-width: 56.25em) { .column_content { width: 90%; margin-bottom: 5em; } }
 
 .last-project-column + .bottom-nav { margin-top: 0em; }
 @media screen and (min-width: 56.25em) { .last-project-column + .bottom-nav { margin-top: 2.5em; } }
@@ -119,10 +127,13 @@ h3 + p, h3 + ul, h3 + p + p { padding-left: 0; padding-right: 0; padding-top: .2
 html.no-touch .thumb-image img { -webkit-transition: all .2s ease-in-out; -moz-transition: all .2s ease-in-out; -o-transition: all .2s ease-in-out; transition: all .2s ease-in-out; }
 html.no-touch .thumb-image img:hover { -webkit-transform: scale3d(1.025, 1.025, 1); -moz-transform: scale3d(1.025, 1.025, 1); -o-transform: scale3d(1.025, 1.025, 1); transform: scale3d(1.025, 1.025, 1); }
 
-.project-callout-shell { padding: 3em; line-height: 1.5; background-color: rgba(0, 0, 0, 0.15); }
-.project-callout-shell .project-callout { font-size: 140%; color: #424242; padding-bottom: 0; }
+.project-callout-shell { padding: 3em; line-height: 1.5; background-color: #f0f0f0; }
+.project-callout-shell .project-callout { font-size: 140%; color: #424242; padding-bottom: 0; margin: 0 auto; }
 @media screen and (min-width: 56.25em) { .project-callout-shell .project-callout { font-size: 160%; } }
+.project-callout-shell.wide-callout { margin-bottom: 2.5em; }
+@media screen and (min-width: 56.25em) { .project-callout-shell.wide-callout { margin-bottom: 5em; padding: 7% 25%; } }
 @media screen and (min-width: 56.25em) { .project-callout-shell { padding: 7%; line-height: 1.6; } }
+.project-callout-shell img { width: 100%; }
 
 .column-1-of-3 { display: table-cell; width: 100%; float: left; }
 @media screen and (min-width: 56.25em) { .column-1-of-3 { width: 33.33%; padding-right: .15em; } }
@@ -135,7 +146,7 @@ html.no-touch .thumb-image img:hover { -webkit-transform: scale3d(1.025, 1.025, 
 
 .running { background-color: #ccc364; }
 
-.theakkermans { background-color: #d7d7d7; }
+.theakkermans { background-color: #f0f0f0; }
 
 .dark { background-color: #424242; color: white; }
 .dark .project-callout { color: white; }
@@ -144,14 +155,16 @@ html.no-touch .thumb-image img:hover { -webkit-transform: scale3d(1.025, 1.025, 
 
 .luxuryfashion { background-color: #c2aa53; }
 
-.scadux, .logo-color { background-color: #d7d7d7; }
+.scadux, .logo-color { background-color: #f0f0f0; }
 
-.absolutehorseradish { background-color: #d7d7d7; }
+.absolutehorseradish { background-color: #f0f0f0; }
 
 .scadcoursecards { background-color: #2c3f4f; }
-.scadcoursecards .project-callout { color: white; }
+.scadcoursecards .project-callout, .scadcoursecards .project-detail-heading { color: white; }
 
 .absolutehorseradish-video, .foolsquest-video { background-color: #323232; }
+
+.process-video { background-color: rgba(0, 0, 0, 0.15); }
 
 .project-types { font: 400 85%/1.4 "ff-tisa-sans-web-pro", "Helvetica Neue", Helvetica, sans-serif; color: #616161; text-transform: uppercase; letter-spacing: .075em; margin-bottom: 2em; padding-bottom: 0; }
 .wf-loading .project-types { visibility: hidden; }
@@ -159,25 +172,25 @@ html.no-touch .thumb-image img:hover { -webkit-transform: scale3d(1.025, 1.025, 
 .read-more { display: none; }
 @media screen and (min-width: 56.25em) { .read-more { display: block; } }
 
-button { color: white; background-color: #757575; -webkit-border-radius: 0.5em; -moz-border-radius: 0.5em; border-radius: 0.5em; font-family: "ff-tisa-sans-web-pro", "Helvetica Neue", Helvetica, sans-serif; font-size: 100%; padding: .75em 1.5em; cursor: pointer; border: 1px solid white; -webkit-transition: all .2s ease-in-out; -moz-transition: all .2s ease-in-out; -o-transition: all .2s ease-in-out; transition: all .2s ease-in-out; display: block; margin: 0 auto; }
+button { color: #515151; background-color: #f2f2f2; -webkit-border-radius: 0.35em; -moz-border-radius: 0.35em; border-radius: 0.35em; font-family: "ff-tisa-sans-web-pro", "Helvetica Neue", Helvetica, sans-serif; font-size: 100%; padding: .75em 1.5em; cursor: pointer; border: 1px solid #515151; -webkit-transition: all .2s ease-in-out; -moz-transition: all .2s ease-in-out; -o-transition: all .2s ease-in-out; transition: all .2s ease-in-out; display: block; margin: 0 auto; }
 .wf-loading button { visibility: hidden; }
-button.show-me-more { color: #757575; border: 1px solid #757575; background-color: white; margin-bottom: 1em; }
+button.show-me-more { color: #515151; border: 1px solid #515151; background-color: #fafafa; margin-bottom: 1em; }
 @media screen and (min-width: 56.25em) { button.show-me-more { display: none; } }
-html.no-touch button.show-me-more:hover { background-color: #757575; color: white; border: 1px solid #757575; }
-html.no-touch button:hover { background-color: white; color: #757575; border: 1px solid white; }
+html.no-touch button.show-me-more:hover { background-color: #515151; color: #fafafa; border: 1px solid #515151; }
+html.no-touch button:hover { background-color: #515151; color: #f2f2f2; border: 1px solid #515151; }
 button:focus { outline: none; }
 
 .documentation ul li { padding-bottom: .5em; }
 @media screen and (min-width: 56.25em) { .documentation ul li { padding-bottom: 0; } }
 .documentation ul li.single-line-li { padding-bottom: 0; }
 
-ul li a { color: rgba(61, 61, 61, 0.6); -webkit-transition: all .2s ease-in-out; -moz-transition: all .2s ease-in-out; -o-transition: all .2s ease-in-out; transition: all .2s ease-in-out; font-size: 105%; }
+ul li a { color: rgba(61, 61, 61, 0.7); -webkit-transition: all .2s ease-in-out; -moz-transition: all .2s ease-in-out; -o-transition: all .2s ease-in-out; transition: all .2s ease-in-out; font-size: 105%; }
 ul li a.current { color: black; }
-html.no-touch ul li a:hover { color: rgba(61, 61, 61, 0.85); }
+html.no-touch ul li a:hover { color: rgba(61, 61, 61, 0.95); }
 
 .footer-wrapper { margin: 0 auto; width: 100%; background-color: #424242; }
 
-.bottom-nav { background-color: #757575; margin-top: 0; text-align: center; padding: 2.5em 0; }
+.bottom-nav { background-color: #f2f2f2; margin-top: 0; text-align: center; padding: 2.5em 0; }
 @media screen and (min-width: 56.25em) { .bottom-nav { padding: 2.5em; } }
 .bottom-nav button { display: inline; }
 .bottom-nav button.previous { margin-right: .5em; }
@@ -199,9 +212,9 @@ html.no-touch footer ul li a:hover { color: white; }
 .wf-loading .copyright { visibility: hidden; }
 @media screen and (min-width: 56.25em) { .copyright { padding: 0 .3em; } }
 
-.nav-wrapper { margin: 0 auto; width: 100%; background-color: white; }
+.nav-wrapper { margin: 0 auto; width: 100%; background-color: #f2f2f2; }
 
-nav { overflow: hidden; position: relative; width: 100%; max-width: 90em; z-index: 100; margin: 0 auto; padding: 2em 1.75em; background-color: white; }
+nav { overflow: hidden; position: relative; width: 100%; max-width: 90em; z-index: 100; margin: 0 auto; padding: 2em 1.75em; background-color: #f2f2f2; }
 nav h1 { line-height: 2.25; }
 nav ul { font-size: 110%; }
 @media screen and (min-width: 30em) { nav { padding: 2em 2.75em; } }
@@ -224,7 +237,7 @@ nav ul { font-size: 110%; }
 
 .site-nav-vertical { display: table-cell; vertical-align: middle; top: 0; text-align: center; font-size: 150%; }
 
-.site-nav-main { position: absolute; top: 7.375em; }
+.site-nav-main { position: relative; top: 7.375em; }
 
 .naviconwrap { opacity: 1.0; visibility: visible; }
 @media screen and (min-width: 56.25em) { .naviconwrap { opacity: 0; visibility: hidden; } }
@@ -255,10 +268,11 @@ html.no-touch .navicon-button:hover .navicon:before, html.no-touch .navicon-butt
 
 .open.x .navicon:after { -webkit-transform: rotate3d(0, 0, 1, 45deg); -moz-transform: rotate3d(0, 0, 1, 45deg); transform: rotate3d(0, 0, 1, 45deg); }
 
-.poster { -webkit-transition: opacity 0.35s ease; -moz-transition: opacity 0.35s ease; transition: opacity 0.35s ease; position: relative; background-color: white; height: 100%; overflow: hidden; }
+.poster { -webkit-transition: opacity 0.35s ease; -moz-transition: opacity 0.35s ease; transition: opacity 0.35s ease; position: relative; background-color: white; height: 100%; overflow: hidden; width: 100%; margin: 0 auto; margin-bottom: 2.5em; }
+@media screen and (min-width: 56.25em) { .poster { width: 90%; margin-bottom: 5em; } }
 
 .poster-image { overflow: hidden; height: 75%; }
-.poster-image img { display: block; width: 100%; max-width: 100%; height: auto; border: 0; }
+.poster-image img { display: block; width: 100%; max-width: 100%; height: auto; border: 0; margin-bottom: 0; }
 
 .mousetest { width: 100%; max-width: 800px; margin: 0 auto; }
 
@@ -280,7 +294,7 @@ html.no-touch .navicon-button:hover .navicon:before, html.no-touch .navicon-butt
 
 .flexslider .slides > li { display: none; -webkit-backface-visibility: hidden; }
 
-.flexslider .slides img { width: 100%; display: block; }
+.flexslider .slides img { width: 100%; display: block; margin-bottom: 0em; }
 
 .flexslider .slides video { width: 100%; height: auto; display: inline-block; }
 
@@ -326,8 +340,8 @@ html[xmlns] .slides { display: block; }
 
 @media screen and (max-width: 860px) { .flex-direction-nav .flex-prev { opacity: 1; left: 0; }
   .flex-direction-nav .flex-next { opacity: 1; right: 0; } }
-.flexslider { padding: 1.25em 1.25em 1.3em 1.25em; background-color: #d7d7d7; }
-@media screen and (min-width: 56.25em) { .flexslider { padding: 5em 5em 2em 5em; } }
+.flexslider { padding: 1.25em 1.25em 1.3em 1.25em; background-color: #f0f0f0; width: 100%; margin: 0 auto; margin-bottom: 2.5em; }
+@media screen and (min-width: 56.25em) { .flexslider { padding: 5em 5em 2em 5em; width: 90%; margin-bottom: 5em; } }
 
 .white-bg { background-color: white; }
 
