--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -53,11 +53,10 @@ body { padding: 0; margin: 0; background-color: #fafafa; }
 header { padding: 1.75em; margin: 0 auto; }
 @media screen and (min-width: 30em) { header { padding: 3.5em 2.5em 3.5em 2.5em; } }
 header a { color: #3cb878; }
-@media screen and (min-width: 56.25em) { header { width: 90%; } }
 
 .documentation { padding: 1.75em; padding-top: 0; width: 100%; margin: 0 auto; padding-bottom: 2.5em; }
 @media screen and (min-width: 30em) { .documentation { padding: 2.5em; padding-top: 0; } }
-@media screen and (min-width: 56.25em) { .documentation { width: 90%; padding-bottom: 5em; } }
+@media screen and (min-width: 56.25em) { .documentation { padding-bottom: 5em; } }
 .documentation a { color: #3cb878; }
 .documentation.process h3.title { border-bottom: none; }
 .documentation.process .project-detail-content { padding-bottom: .6em; }
@@ -71,7 +70,7 @@ ul { list-style: none; }
 li { list-style-type: none; }
 
 img { width: 100%; display: block; margin: 0 auto; margin-bottom: 2.5em; }
-@media screen and (min-width: 56.25em) { img { width: 90%; margin-bottom: 5em; } }
+@media screen and (min-width: 56.25em) { img { margin-bottom: 5em; } }
 
 img + img { margin-top: .15em; }
 
@@ -105,7 +104,7 @@ h3 + p, h3 + ul, h3 + p + p { padding-left: 0; padding-right: 0; padding-top: .2
 .column_content { width: 100%; overflow: hidden; display: table; height: 100%; margin: 0 auto; margin-bottom: 2.5em; }
 .column_content img { margin-bottom: 0; width: 100%; }
 .column_content.index { margin-bottom: 0; }
-@media screen and (min-width: 56.25em) { .column_content { width: 90%; margin-bottom: 5em; } }
+@media screen and (min-width: 56.25em) { .column_content { margin-bottom: 5em; } }
 
 .last-project-column + .bottom-nav { margin-top: 0em; }
 @media screen and (min-width: 56.25em) { .last-project-column + .bottom-nav { margin-top: 2.5em; } }
@@ -204,7 +203,7 @@ footer ul li a { color: rgba(255, 255, 255, 0.7); }
 html.no-touch footer ul li a:hover { color: white; }
 @media screen and (min-width: 56.25em) { footer ul li { display: inline-block; } }
 @media screen and (min-width: 30em) { footer { padding: 2.5em; } }
-@media screen and (min-width: 56.25em) { footer { padding: 2.5em 2.5em; width: 90%; }
+@media screen and (min-width: 56.25em) { footer { padding: 2.5em 2.5em; }
   footer ul li { margin-right: 1.25em; }
   footer ul li:last-child { margin-right: 0; } }
 
@@ -218,7 +217,7 @@ nav { overflow: hidden; position: relative; width: 100%; max-width: 90em; z-inde
 nav h1 { line-height: 2.25; }
 nav ul { font-size: 110%; }
 @media screen and (min-width: 30em) { nav { padding: 2em 2.75em; } }
-@media screen and (min-width: 56.25em) { nav { display: block; padding: 3em 2.5em; height: 9.688em; width: 90%; } }
+@media screen and (min-width: 56.25em) { nav { display: block; padding: 3em 2.5em; height: 9.688em; } }
 
 .header-logo { font-size: 150%; float: left; display: block; z-index: 100; position: relative; }
 .header-logo a { color: inherit; }
@@ -269,7 +268,7 @@ html.no-touch .navicon-button:hover .navicon:before, html.no-touch .navicon-butt
 .open.x .navicon:after { -webkit-transform: rotate3d(0, 0, 1, 45deg); -moz-transform: rotate3d(0, 0, 1, 45deg); transform: rotate3d(0, 0, 1, 45deg); }
 
 .poster { -webkit-transition: opacity 0.35s ease; -moz-transition: opacity 0.35s ease; transition: opacity 0.35s ease; position: relative; background-color: white; height: 100%; overflow: hidden; width: 100%; margin: 0 auto; margin-bottom: 2.5em; }
-@media screen and (min-width: 56.25em) { .poster { width: 90%; margin-bottom: 5em; } }
+@media screen and (min-width: 56.25em) { .poster { margin-bottom: 5em; } }
 
 .poster-image { overflow: hidden; height: 75%; }
 .poster-image img { display: block; width: 100%; max-width: 100%; height: auto; border: 0; margin-bottom: 0; }
@@ -341,7 +340,7 @@ html[xmlns] .slides { display: block; }
 @media screen and (max-width: 860px) { .flex-direction-nav .flex-prev { opacity: 1; left: 0; }
   .flex-direction-nav .flex-next { opacity: 1; right: 0; } }
 .flexslider { padding: 1.25em 1.25em 1.3em 1.25em; background-color: #f0f0f0; width: 100%; margin: 0 auto; margin-bottom: 2.5em; }
-@media screen and (min-width: 56.25em) { .flexslider { padding: 5em 5em 2em 5em; width: 90%; margin-bottom: 5em; } }
+@media screen and (min-width: 56.25em) { .flexslider { padding: 5em 5em 2em 5em; margin-bottom: 5em; } }
 
 .white-bg { background-color: white; }
 
