--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -254,6 +254,13 @@ img {
 		margin-bottom:5em;
 	}
 } 
+video { 
+	width:100%; display:block; margin:0 auto; margin-bottom:2.5em; 
+	@media screen and (min-width: $width-medium) { 	
+		//width:90%;
+		margin-bottom:5em;
+	}
+} 
 img + img {
 	margin-top:.15em;	
 }
@@ -423,6 +430,13 @@ html.no-touch .thumb-image img {
 				margin-bottom:5em;
 				padding: 7% 25%;
 			}
+		}
+		&.project-callout-white {
+			margin-bottom:1em;
+			background-color: rgba(250,250,250,1.0);
+				@media screen and (min-width: $width-medium) {
+					margin-bottom:0;
+				}	
 		}
 		@media screen and (min-width: $width-medium) {
 			padding:7%;
