--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -284,6 +284,8 @@ h3 + p, h3 + ul, h3 + p + p {
     width: 100%; }
   .column_content.index {
     margin-bottom: 0; }
+  .column_content.recent-work {
+    margin-bottom: 0; }
   @media screen and (min-width: 56.25em) {
     .column_content {
       margin-bottom: 5em; } }
@@ -353,6 +355,11 @@ html.no-touch .thumb-image img {
     @media screen and (min-width: 56.25em) {
       .project-callout-shell .project-callout {
         font-size: 160%; } }
+    .project-callout-shell .project-callout a {
+      color: #3cb878; }
+      html.no-touch .project-callout-shell .project-callout a:hover {
+        color: black;
+        border-bottom: none; }
   .project-callout-shell.wide-callout {
     margin-bottom: 2.5em; }
     @media screen and (min-width: 56.25em) {
@@ -400,6 +407,75 @@ html.no-touch .thumb-image img {
     .column-3-of-3 {
       width: 33.33%;
       padding-left: .15em; } }
+
+.grid-container {
+  display: grid;
+  grid-gap: 10px;
+  background-color: inherit;
+  padding: 10px; }
+  @media screen and (min-width: 56.25em) {
+    .grid-container {
+      grid-template: auto / auto auto auto; } }
+
+.grid-container-condensed {
+  max-width: 100%;
+  margin: 0 auto; }
+  @media screen and (min-width: 56.25em) {
+    .grid-container-condensed {
+      max-width: 1100px;
+      margin: 0 auto; } }
+
+.grid-container-3 {
+  grid-template-columns: 100% repeat;
+  grid-template-rows: auto; }
+  @media screen and (min-width: 30em) {
+    .grid-container-3 {
+      grid-template-columns: auto; } }
+
+.grid-container-4 {
+  grid-template: auto / auto auto; }
+
+.grid-container-6 {
+  grid-template: auto / auto auto auto; }
+
+.grid-container > div {
+  background-color: white;
+  text-align: center;
+  padding: 0;
+  font-size: 30px; }
+
+.span3--3 {
+  grid-column: 1 / span 1; }
+  .span3--3 img {
+    padding: 20px; }
+  @media screen and (min-width: 30em) {
+    .span3--3 {
+      grid-column: 3 / span 1; }
+      .span3--3 img {
+        padding: 0px; } }
+
+.span1--2 {
+  grid-column: 1 / span 1; }
+  .span1--2 img {
+    padding: 20px; }
+  @media screen and (min-width: 30em) {
+    .span1--2 {
+      grid-column: 1 / span 2; }
+      .span1--2 img {
+        padding: 0px; } }
+
+.web-shadow {
+  -webkit-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.15);
+  box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.15); }
+
+.recent-work-wide {
+  max-width: 100%;
+  margin: 0 auto; }
+  @media screen and (min-width: 56.25em) {
+    .recent-work-wide {
+      max-width: 1300px;
+      margin: 0 auto; } }
 
 .running {
   background-color: #ccc364; }
