--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -135,7 +135,7 @@ li {
 body {
   padding: 0;
   margin: 0;
-  background-color: #fafafa; }
+  background-color: white; }
 
 header {
   padding: 1.75em;
@@ -150,6 +150,7 @@ header {
   padding: 1.75em;
   padding-top: 0;
   width: 100%;
+  max-width: 50em;
   margin: 0 auto;
   padding-bottom: 2.5em; }
   @media screen and (min-width: 30em) {
@@ -170,9 +171,6 @@ header {
     @media screen and (min-width: 56.25em) {
       .documentation.index {
         padding-top: 2.5em; } }
-
-header {
-  background-color: #fafafa; }
 
 ul {
   list-style: none; }
@@ -257,8 +255,7 @@ h3 + p, h3 + ul, h3 + p + p {
   position: relative;
   margin: 0 auto;
   max-width: 90em;
-  width: 100%;
-  background-color: #fafafa; }
+  width: 100%; }
 
 .title {
   font-family: "ff-tisa-sans-web-pro", "Helvetica Neue", Helvetica, sans-serif;
@@ -345,8 +342,7 @@ html.no-touch .thumb-image img {
 
 .project-callout-shell {
   padding: 3em;
-  line-height: 1.5;
-  background-color: #f0f0f0; }
+  line-height: 1.5; }
   .project-callout-shell .project-callout {
     font-size: 140%;
     color: #424242;
@@ -367,8 +363,7 @@ html.no-touch .thumb-image img {
         margin-bottom: 5em;
         padding: 7% 25%; } }
   .project-callout-shell.project-callout-white {
-    margin-bottom: 1em;
-    background-color: #fafafa; }
+    margin-bottom: 1em; }
     @media screen and (min-width: 56.25em) {
       .project-callout-shell.project-callout-white {
         margin-bottom: 0; } }
@@ -524,7 +519,6 @@ html.no-touch .thumb-image img {
 
 button {
   color: #515151;
-  background-color: #fafafa;
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
   border-radius: 6px;
@@ -544,7 +538,6 @@ button {
   button.show-me-more {
     color: #515151;
     border: 1px solid #515151;
-    background-color: #fafafa;
     margin-bottom: 1em; }
     @media screen and (min-width: 56.25em) {
       button.show-me-more {
@@ -590,7 +583,7 @@ ul li a {
   background-color: #f2f2f2; }
 
 .bottom-nav {
-  background-color: #fafafa;
+  background-color: white;
   margin-top: 0;
   text-align: center;
   padding: 2.5em 0; }
@@ -614,7 +607,8 @@ footer {
   margin: 0 auto;
   padding: 1.75em; }
   footer ul {
-    margin-bottom: 1.25em; }
+    margin-bottom: 0;
+    font-size: 110%; }
   @media screen and (min-width: 56.25em) {
     footer ul li {
       display: inline-block; } }
@@ -633,7 +627,7 @@ footer {
   font: 400 75%/1.65 "ff-tisa-sans-web-pro", "Helvetica Neue", Helvetica, sans-serif;
   text-transform: uppercase;
   letter-spacing: .1em;
-  color: rgba(61, 61, 61, 0.7);
+  color: #3d3d3d;
   padding: 0 .2em; }
   .wf-loading .copyright {
     visibility: hidden; }
@@ -643,8 +637,7 @@ footer {
 
 .nav-wrapper {
   margin: 0 auto;
-  width: 100%;
-  background-color: #fafafa; }
+  width: 100%; }
 
 nav {
   overflow: hidden;
@@ -653,8 +646,7 @@ nav {
   max-width: 90em;
   z-index: 100;
   margin: 0 auto;
-  padding: 2em 1.75em;
-  background-color: #fafafa; }
+  padding: 2em 1.75em; }
   nav h1 {
     line-height: 2.25; }
   nav ul {
@@ -1001,7 +993,7 @@ html[xmlns] .slides {
 
 .flexslider {
   padding: 1.25em 1.25em 1.3em 1.25em;
-  background-color: #f0f0f0;
+  background-color: #f3f3f3;
   width: 100%;
   margin: 0 auto;
   margin-bottom: 2.5em; }
