--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -196,6 +196,12 @@ video {
     video {
       margin-bottom: 5em; } }
 
+.predocumetation {
+  margin-bottom: 2.5em; }
+  @media screen and (min-width: 56.25em) {
+    .predocumetation {
+      margin-bottom: 5em; } }
+
 img + img {
   margin-top: .15em; }
 
@@ -344,13 +350,13 @@ html.no-touch .thumb-image img {
   padding: 3em;
   line-height: 1.5; }
   .project-callout-shell .project-callout {
-    font-size: 140%;
+    font-size: 120%;
     color: #424242;
-    padding-bottom: 0;
+    padding: 0.5em 0;
     margin: 0 auto; }
     @media screen and (min-width: 56.25em) {
       .project-callout-shell .project-callout {
-        font-size: 160%; } }
+        font-size: 140%; } }
     .project-callout-shell .project-callout a {
       color: #3cb878; }
       html.no-touch .project-callout-shell .project-callout a:hover {
@@ -468,10 +474,11 @@ html.no-touch .thumb-image img {
       .span1--2 img {
         padding: 0px; } }
 
-.web-shadow {
-  -webkit-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.15);
-  -moz-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.15);
-  box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.15); }
+@media screen and (min-width: 56.25em) {
+  .web-shadow {
+    -webkit-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.15);
+    -moz-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.15);
+    box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.15); } }
 
 .recent-work-wide {
   max-width: 100%;
@@ -479,6 +486,14 @@ html.no-touch .thumb-image img {
   @media screen and (min-width: 56.25em) {
     .recent-work-wide {
       max-width: 1300px;
+      margin: 0 auto; } }
+
+.recent-work-floating-browsers {
+  width: calc(100% - 3em);
+  margin: 0 auto; }
+  @media screen and (min-width: 56.25em) {
+    .recent-work-floating-browsers {
+      width: calc(100% - 2em);
       margin: 0 auto; } }
 
 .running {
