--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -258,6 +258,12 @@ video {
 		//width:90%;
 		margin-bottom:5em;
 	}
+}
+.predocumetation {
+	margin-bottom:2.5em; 
+	@media screen and (min-width: $width-medium) { 	
+		margin-bottom:5em;
+	}
 } 
 img + img {
 	margin-top:.15em;	
@@ -413,12 +419,13 @@ html.no-touch .thumb-image img {
 		padding: 3em; //was $section-spacing-wide
 		line-height:1.5; //was 1.45
 		& .project-callout {
-			font-size:140%;
+			font-size:120%; //was 140%
 			color:rgba(66,66,66,1.0);
-			padding-bottom:0;
+			//padding-bottom:0;
+			padding:0.5em 0;
 			margin:0 auto;
 			@media screen and (min-width: $width-medium) {
-				font-size:160%; //was 200%
+				font-size:140%; //was 160%
 			}
 			& a {
 				color:$seth-brand-color;
@@ -539,15 +546,25 @@ html.no-touch .thumb-image img {
 	}
 }
 .web-shadow {
-	-webkit-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.15);
-	-moz-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.15);
-	box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.15);
+	@media screen and (min-width: $width-medium) {
+		-webkit-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.15);
+		-moz-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.15);
+		box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.15);
+	}
 }
 .recent-work-wide {
 	max-width:100%;
 	margin:0 auto;
 	@media screen and (min-width: $width-medium) {
 		max-width:1300px;
+		margin:0 auto;
+	}
+}
+.recent-work-floating-browsers {
+	width: calc(100% - 3em);
+	margin:0 auto;
+	@media screen and (min-width: $width-medium) {
+		width: calc(100% - 2em);
 		margin:0 auto;
 	}
 }
